<resources>
    <string name="app_name">Stars\'UP</string>
    <string name="texte_connexion">Veuillez entrer vos identifiants de connexion</string>
    <string name="texte_identifiant">Identifiant</string>
    <string name="texte_mdp">Mot de passe</string>
    <string name="texte_bouton_valider">Valider</string>
    <string name="TVnote">Note du restaurant</string>
    <string name="TVcommentaire">Commentaire</string>
    <string name="CBcontrevisite">Contre-Visite</string>
    <string name="TVvide">null</string>
    <string name="TVdeuxiemePartieNote">10</string>
    <string name="TVslash">/</string>
</resources>
